replace all the 'getLast' functions in  RightPanel